# miniperf

./: .gitignore  .insta.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: main.yml
collector/: Cargo.toml
collector/src/: ffi.rs  lib.rs
mperf/: Cargo.toml
mperf-data/: Cargo.toml  build.rs
mperf-data/schema/: event.capnp  ipc_message.capnp
mperf-data/src/: event.rs  event_capnp.rs  ipc.rs  ipc_message_capnp.rs  lib.rs
mperf/src/: counter_selection.rs  event_dispatcher.rs  events_export.rs  main.rs  postprocess.rs  record.rs  stat.rs  unwind.rs  utils.rs
mperf/src/disassembly/: mod.rs
mperf/src/processing/: mod.rs
mperf/src/tui/: config.rs  flamegraph.rs  hotspots.rs  loops.rs  metrics_table.rs  mod.rs  summary.rs
pmu/: CHANGELOG.md  Cargo.toml  README.md  build.rs
pmu-data/: CHANGELOG.md  Cargo.toml  README.md
pmu-data/src/: arith_parser.rs  lib.rs
pmu/events/amd/: zen1.json
pmu/events/arm/: cortex_a520.json  cortex_a720.json
pmu/events/intel/: README.md  tigerlake.json
pmu/events/sifive/: u7.json
pmu/events/spacemit/: x60.json
pmu/examples/: criterion_counter.rs  hot_block.rs  quick_sample.rs
pmu/src/: capabilities.rs  cpu_family.rs  criterion_measurement.rs  event_timer.rs  lib.rs  process.rs  quick.rs
pmu/src/driver/: kperf.rs  mod.rs  perf.rs
pmu/src/driver/kperf/: inprocess.rs  system.rs
pmu/src/driver/perf/: binding.rs  events.rs  mmap.rs
pmu/src/driver/perf/snapshots/: pmu__driver__perf__mmap__test__basic_test.snap
pmu/tests/: counting.rs
shmem/: Cargo.toml
shmem/src/: lib.rs  posix.rs  proc_channel.rs  utils.rs
symbolize/: Cargo.toml  README.md
symbolize/src/: lib.rs
symbolize/tests/: debuginfod.rs
truth/: Cargo.toml  README.md  build.rs
truth/fixtures/: branch_heavy.c  duty_split.c  known_sleeper.c  pointer_chase.c
truth/src/: lib.rs
truth/tests/: fixtures.rs  profile.rs
utils/: profile_smoke.c
utils/clang_plugin/: CMakeLists.txt  pass.cpp
utils/event-import/: Cargo.toml  README.md
utils/event-import/src/: lib.rs  main.rs
utils/event-import/tests/fixtures/: arm-telemetry.json  intel-perfmon.json
