[package]
name = "mperf-data"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
capnp = "0.20.3"
flatbuffers = "24.12.23"

[build-dependencies]
capnpc = "0.20.1"
flatc = "0.2.2"
flatc-rust = "0.2.0"
