[package]
name = "mperf-data"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
capnp = "0.20.3"
capnp-rpc = "0.20.3"

[build-dependencies]
capnpc = "0.20.1"
