[package]
name = "mperf-data"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
smallvec = {version = "1.15.0", features = ["serde", "impl_bincode"] }
shmem = { path = "../shmem/" }
bincode = "2.0.1"
