[package]
name = "mperf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
comfy-table = "7.1.3"
num-format = "0.4.4"
pmu = { path = "../pmu" }
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mperf-data = { path = "../mperf-data/" }
tokio = { version = "1", features = ["full"] }
atomic-counter = "1.0.1"
parking_lot = "0.12.3"
proc-maps = "0.4.0"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
memmap2 = "0.9.5"
serde-jsonlines = "0.7.0"
thread_local = "1.1.8"
libc = "0.2.169"
smallvec = "1.13.2"
shmem = { path = "../shmem/" }
sqlite = "0.37.0"
uuid = { version = "1.16.0", features = ["v7"] }

[target.'cfg(target_os = "linux")'.dependencies]
addr2line = "0.24.2"
