[package]
name = "pmu"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.144"
thiserror = "2.0.9"
pmu-data = { path = "../pmu-data/" }
lazy_static = "1.5.0"
smallvec = "1.13.2"
itertools = "0.14.0"
uuid = { version = "1.16.0", features = ["v7"] }
hashbrown = "0.15.2"

[target.'cfg(unix)'.dependencies]
proc_getter = "0.0.3"
dlopen2 = "0.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event-open-sys2 = "5.0.6"

[build-dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
pmu-data = { path = "../pmu-data/" }
glob = "0.3.2"
quote = "1.0.38"
prettyplease = "0.2.29"
syn = "2.0.96"
