[package]
name = "miniperf-symbolize"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Native symbol, source, inline-frame, and perf-map resolution for miniperf"
license = "Apache-2.0"
repository = "https://github.com/alexbatashev/miniperf"
readme = "README.md"

[lib]
name = "symbolize"

[dependencies]
addr2line = "0.24.2"
crc32fast = "1.4.2"
libc = "0.2.169"
object = "0.36.7"
thiserror = "2.0.18"
